# walker

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  reset_db.sh
.github/workflows/: ci.yml
captures/: UrevoBtCapture.pklg  UrevoBtCaptureStartStop.pklg
dashboard/: app.js  index.html
migrations/: 001_initial.sql  002_calorie_functions.sql  003_drop_calories_column.sql  005_interpolate_met.sql  006_acsm.sql  007_simplify_calorie_functions.sql  008_ludlow_weyand_minetti.sql  009_strava.sql
src/: activity.rs  auth.rs  ble.rs  display.rs  main.rs  reporter.rs
src/device/: mod.rs  urevo.rs
src/server/: activity.rs  alltime.rs  auth.rs  crypto.rs  dashboard.rs  day.rs  db.rs  history.rs  leaderboard.rs  live.rs  mod.rs  profile.rs  state.rs  strava.rs  update.rs
src/server/strava_seed/: 18214327032.json
tests/: db.rs
