[package]
name = "walker"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "3"
uuid = { version = "1.23.0", features = ["v4"] }
futures = "0.3.32"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["json", "ws"] }
tower-http = { version = "0.6.8", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "form"] }
rand = "0.10.0"
open = "5.3.3"
dirs = "6.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
