[package]
name = "walker"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["client", "server"]
client = ["dep:btleplug", "dep:colored", "dep:futures", "dep:async-trait", "dep:dirs"]
server = ["dep:axum", "dep:tower-http", "dep:sqlx"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1.23.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "form"] }
open = "5.3.3"
dirs = { version = "6.0.0", optional = true }

# Client-only (BLE treadmill connection)
btleplug = { version = "0.11", optional = true }
colored = { version = "3", optional = true }
futures = { version = "0.3.32", optional = true }
async-trait = { version = "0.1.89", optional = true }

# Server-only (HTTP server, DB, auth)
axum = { version = "0.8.8", features = ["json", "ws"], optional = true }
tower-http = { version = "0.6.8", features = ["cors"], optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"], optional = true }

# Shared
rand = "0.10.0"
